cabal-version:      2.4
name:               mcap-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Brian Camacho
maintainer:         bcamacho@anduril.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable mcap-hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        , base ^>= 4.16.4.0
        , binary ^>= 0.8.9
        , bytestring ^>= 0.12.0.2
        , containers ^>= 0.6.5.1
        , mtl ^>= 2.2.2
        , utf8-string ^>= 1.0.2
    hs-source-dirs:   app
    default-language: Haskell2010
